--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,15 +10,23 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://github.com/haris78866"
 
 [social.params]
 icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "Email"
+name = "Mail"
+url = "(mailto:ariainharis151@gmail.com)"
 
 [social.params]
-icon = "brand-twitter"
+icon = "brand-email"
+
+[[social]]
+identifier = "Whats app"
+name = "Whats-app"
+url = "[Call me](tel:+923486580072)"
+
+[social.params]
+icon = "brand-Whats-app"
